--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -24,5 +24,6 @@
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false
   },
+  "include": ["src/**/*"],
   "exclude": ["dist"]
 }
